--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^14.0.23",
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
+    "moment": "^2.27.0",
     "ts-node": "^8.0.2",
     "typescript": "^3.3.3333"
   }
