--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Helps schedule games for West Marches server",
   "main": "index.js",
   "scripts": {
-    "bot": "ts-node bot.ts"
+    "prod": "BOT_ENV=prod ts-node bot.ts",
+    "dev": "BOT_ENV=dev ts-node bot.ts"
   },
   "keywords": [],
   "author": "",
