--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "description": "Helps schedule games for West Marches server",
   "main": "index.js",
   "scripts": {
-    "prod": "BOT_ENV=prod ts-node bot.ts",
-    "dev": "BOT_ENV=dev ts-node bot.ts"
+    "prod": "BOT_ENV=prod ts-node server.ts",
+    "dev": "BOT_ENV=dev ts-node server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/node": "^14.0.23",
+    "body-parser": "^1.18.3",
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
+    "express": "^4.16.4",
     "moment": "^2.27.0",
     "ts-node": "^8.0.2",
     "typescript": "^3.3.3333"
